--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,55 +6,39 @@ import { getCollection } from "astro:content";
 // Carica le informazioni about
 const aboutData = await getCollection("about");
 const about = aboutData[0];
-console.log(aboutData)
 ---
 <BaseLayout title="About Me" description={about.data.shortBio}>
   <div class="about-container">
-    <h1>{about.data.title}</h1>
-    <h2>{about.data.subtitle}</h2>
     <div class="about-content">
+        {about.data.featuredImage &&
+            <div class="about-image">
+              <img src={about.data.featuredImage} alt={about.data.title} />
+            </div>
+          }
       <div class="about-text">
-        <p>{about.data.shortBio}</p>
+        <p set:html={about.data.shortBio}></p>
 
-        <h3>Skills</h3>
-        <div class="skills-container">
+        <h3 class="small-titles">Core Skills</h3>
+        <ul class="skills-container">
           {about.data.skills.map((skill) => (
-            <span class="skill-tag">{skill}</span>
+            <li class="skill-tag">{skill}</li>
           ))}
-        </div>
+        </ul>
 
-        <h3>Esperienza</h3>
-        {about.data.experience.map((exp) => (
-          <div class="experience-item">
-            <h4>{exp.role} @ {exp.company}</h4>
-            <span class="period">{exp.period}</span>
-            <p>{exp.description}</p>
-          </div>
-        ))}
-
-        <h3>Formazione</h3>
-        {about.data.education.map((edu) => (
-          <div class="education-item">
-            <h4>{edu.degree}</h4>
-            <p>{edu.institution}, {edu.year}</p>
-          </div>
-        ))}
-
-        <h3>Contatti</h3>
-        <p>Email: <a href={`mailto:${about.data.contacts.email}`}>{about.data.contacts.email}</a></p>
+        <h3 class="small-titles">My Links and Contacts</h3>
+        <p><a href={`mailto:${about.data.contacts.email}`}>{about.data.contacts.email}</a></p>
         {about.data.contacts.github &&
           <p>GitHub: <a href={about.data.contacts.github} target="_blank">GitHub Profile</a></p>
         }
         {about.data.contacts.linkedin &&
-          <p>LinkedIn: <a href={about.data.contacts.linkedin} target="_blank">LinkedIn Profile</a></p>
+          <p><a href={about.data.contacts.linkedin} target="_blank">LinkedIn Profile</a></p>
         }
+        {about.data.contacts.itchio &&
+            <p><a href={about.data.contacts.itchio} target="_blank">Itch.io Gallery</a></p>
+          }
       </div>
 
-      {about.data.featuredImage &&
-        <div class="about-image">
-          <img src={about.data.featuredImage} alt={about.data.title} />
-        </div>
-      }
+
     </div>
   </div>
 </BaseLayout>
