--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,18 +1,18 @@
 .project-container {
     width: 100%;
-    max-width: 1200px;
+    max-width: 75rem;
     margin: 0 auto;
-    padding: 20px;
+    padding: 1rem;
     scroll-behavior: smooth; /* Abilita lo scroll smooth per tutta la pagina */
   }
 
   .project-header {
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
   }
 
   .back-button {
     display: inline-block;
-    margin-bottom: 15px;
+    margin-bottom: 1rem;
     text-decoration: none;
     color: rgba(var(--text-color-rgb), 0.6);
   }
@@ -20,14 +20,21 @@
   /* Immagine principale */
   .project-image-container {
     width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 1rem;
+    aspect-ratio: 16/9;
+    max-height: 35rem;
+    overflow: hidden;
+
   }
 
+  /* Uncomment width, change ma-heigth to 600px if in future i want a bigger image */
   .project-main-image {
     width: 100%;
-    max-height: 600px;
-    object-fit: cover;
+    height: 100%;
+    object-fit: fill;
     display: block;
+    justify-self: center;
+    border-radius: 5px;
   }
 
   /* Tecnologie e link sulla stessa riga */
@@ -35,7 +42,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 2rem;
     flex-wrap: wrap;
   }
 
@@ -43,32 +50,32 @@
   .tech-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 0.5rem;
   }
 
   .project-links-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 0.5rem;
   }
 
   .tech-tag {
     display: inline-block;
-    padding: 6px 12px;
+    padding: 0.5rem 1rem;
     background-color: var(--background-lighter-rgb);
     box-shadow: var(--text-color) 0px 0px 4px;
     border-radius: 4px;
-    font-size: 14px;
+    font-size: 0.875rem;
     color: var(--text-color);
   }
 
   .project-link {
     display: inline-block;
-    padding: 6px 12px;
+    padding: 0.5rem 1rem;
     background-color: rgba(var(--accent-red-rgb), 0.6);
     box-shadow: var(--text-color) 0px 0px 4px;
     border-radius: 4px;
-    font-size: 14px;
+    font-size: 0.875rem;
     color: var(--text-color);
     text-decoration: none;
     transition: background-color 0.3s ease;
@@ -80,19 +87,23 @@
 
   /* Descrizione del progetto */
   .project-description {
-    margin-bottom: 40px;
+    margin-bottom: 1rem;
   }
 
-  .project-description h2 {
-    margin-bottom: 15px;
+  .project-description h3 {
+    margin-top: 2rem;
+
+  }
+  .project-description p {
+    color: rgba(var(--text-color-rgb), 0.85);
   }
 
   /* Sezioni togglabili con CSS */
   .project-sections {
     display: flex;
     flex-direction: column;
-    gap: 15px;
-    margin-top: 40px;
+    gap: 1rem;
+    margin-top: 2rem;
 
   }
 
@@ -112,7 +123,7 @@
   .toggle-label {
     display: block;
     width: 100%;
-    padding: 15px;
+    padding: 1rem;
     background-color: var(--background-lighter-rgb);
     font-weight: bold;
     cursor: pointer;
@@ -128,7 +139,7 @@
   .toggle-label::after {
     content: '+';
     position: absolute;
-    right: 15px;
+    right: 1rem;
     transition: transform 0.3s ease;
   }
 
@@ -148,7 +159,7 @@
       opacity 0.2s ease-in-out,
       visibility 0s linear 0.3s,
       padding 0.3s ease-in-out;
-    padding: 0 15px;
+    padding: 0 1rem;
   }
 
   /* Mostra il contenuto quando il checkbox è selezionato */
@@ -181,7 +192,7 @@
     max-height: 400px; /* Altezza massima ridotta per l'immagine */
     object-fit: contain; /* Mantiene le proporzioni senza ritagliare */
     border-radius: 6px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--text-color) 0px 0px 4px;
   }
 
   /* Stile per container video responsivo */
@@ -193,7 +204,7 @@
     max-width: 100%;
     max-height: 400px; /* Imposta un'altezza massima */
     border-radius: 6px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--text-color) 0px 0px 4px;
   }
 
   .video-container iframe {
@@ -216,6 +227,12 @@
 
   .section-text li {
     margin-bottom: 5px;
+  }
+
+  .additional-info {
+    margin-top: 1rem;
+    justify-self: center;
+    font-size: 0.875rem;
   }
 
   /* Media query per schermi più piccoli */
